--- a/htdocs/components/brief/brief.scss
+++ b/htdocs/components/brief/brief.scss
@@ -31,6 +31,10 @@ $electric-blue: rgba(31, 94, 148, 1);
     &__role {
         &--basic {
             text-align: right;
+
+            @media screen and (max-width:767px){
+                margin-bottom: 0;
+            }
         }
 
         &--basic,
@@ -38,22 +42,41 @@ $electric-blue: rgba(31, 94, 148, 1);
             display: inline-block;
             vertical-align: middle;
             font-weight: 700;
-            width: 48%;
+
+            @media screen and (min-width:768px){
+                width: 48%;
+            }
         }
 
         &--list {
-            padding-left: 1em;
+            padding-left: 0;
+
+            @media screen and (min-width:768px){
+                padding-left: 1em;
+            }
         }
 
         &--basic,
         &--item {
             font-size: 60px;
+
+            @media screen and (max-width:767px){
+                text-align: center;
+                font-size: 11vw;
+                display: block;
+            }
         }
 
         &--item {
             list-style: none;
             text-align: left;
             animation: slideInUp ease-in-out 3s;
+
+            @media screen and (max-width:767px){
+                width: 100%;
+                margin-bottom: 0.5em;
+                text-align: center;
+            }
         }
     }
 
