PF - Optimization of Pages directory plus favicon added plus menu style non index page adjustments

--- a/htdocs/common/style.css
+++ b/htdocs/common/style.css
@@ -25,9 +25,11 @@ body {
   }
 }
 .header .menu-item a {
-  color: white;
   text-decoration: none;
   font-family: "Raleway";
+}
+.page__index .header .menu-item a {
+  color: white;
 }
 
 section {
