--- a/htdocs/common/style.scss
+++ b/htdocs/common/style.scss
@@ -25,9 +25,12 @@ body {
             }
 
             a {
-                color: white;
                 text-decoration: none;
                 font-family: 'Raleway';
+
+                .page__index & {
+                    color: white;
+                }
             }
         }
     }
