--- a/htdocs/common/style.scss
+++ b/htdocs/common/style.scss
@@ -37,11 +37,12 @@ body {
 }
 
 section {
-	height: 100vh;
+	min-height: 100vh;
 }
 
 main {
 	width: 1200px;
-	max-width: 100%;
+	max-width: calc(100vw - 30px);
 	padding: 15px;
+    margin: auto;
 }
