--- a/htdocs/common/style.scss
+++ b/htdocs/common/style.scss
@@ -49,7 +49,7 @@ section {
 }
 
 main {
-	width: 1200px;
+	width: 1728px;
 	max-width: calc(100vw - 30px);
 	padding: 15px;
     margin: auto;
@@ -84,13 +84,16 @@ main {
 .col-12 { @include colWidth(12); }
 
 .btn {
-    padding: 6px 18px;
+    padding: 6px 16px;
     border-radius: 50px;
     text-decoration: none;
+    height: fit-content;
+    width: fit-content;
 
     &__secondary {
         color: $electric-blue;
         border: 1px solid $electric-blue;
+        background: white;
     }
 }
 
@@ -131,7 +134,7 @@ main {
 
 .rounded-tag {
     display: flex;
-    width: 80px;
+    width: 120px;
     max-width: 100%;
     min-width: 55px;
     aspect-ratio: 1;
@@ -142,4 +145,5 @@ main {
     box-shadow: 2px 2px 4px #00000020;
     position: relative;
     cursor: pointer;
+    background: white;
 }
