--- a/htdocs/components/basicInformation/basicInformation.css
+++ b/htdocs/components/basicInformation/basicInformation.css
@@ -1,10 +1,14 @@
+/* Utils */ /* --- Colors */
+.basicInformation {
+  position: relative;
+}
 .basicInformation__main {
   height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   font-family: "Raleway";
-  font-size: 15px;
+  font-size: 18px;
 }
 .basicInformation__name {
   margin-top: 0;
@@ -14,9 +18,18 @@
   font-family: "Libre Baskerville";
 }
 .basicInformation .profilePic {
-  width: 80px;
+  width: 100px;
   max-width: 100%;
   margin-bottom: var(--col-gap);
+}
+.basicInformation__buttons {
+  display: flex;
+  flex-wrap: wrap;
+}
+@media (min-width: 768px) {
+  .basicInformation__buttons {
+    flex-direction: column;
+  }
 }
 .basicInformation .btn {
   display: inline-block;
@@ -54,11 +67,11 @@
   display: block;
   position: absolute;
   width: calc(75% - var(--col-gap));
-  top: calc(var(--col-gap) * 6);
   left: calc(var(--col-gap) * 0.5 + 25%);
   font-size: 0.75em;
   line-height: 1.45em;
   font-family: "Libre Baskerville";
+  top: calc(var(--col-gap) * 2.5 + 100%);
 }
 .basicInformation__focus.cols > .col-3:hover .rounded-tag::after {
   content: "";
@@ -68,6 +81,40 @@
   position: absolute;
   top: 100%;
   left: 50%;
+}
+.basicInformation__animation {
+  position: absolute;
+  overflow: hidden;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: -1;
+}
+.basicInformation__animation--star {
+  position: absolute;
+  border-radius: 50%;
+  background-color: lightblue;
+  transition: opacity 1s ease;
+  animation: dotWave ease-in-out 5s;
+}
+
+/* -- Animations -- */
+@keyframes dotWave {
+  0% {
+    opacity: 0;
+  }
+  10% {
+    outline: 0px solid lightblue;
+    opacity: 1;
+    transform: scale(1);
+  }
+  100% {
+    outline: 10px solid lightblue;
+    opacity: 0;
+    background-color: white;
+    transform: scale(3);
+  }
 }
 
 /*# sourceMappingURL=basicInformation.css.map */
