--- a/htdocs/components/brief/brief.css
+++ b/htdocs/components/brief/brief.css
@@ -1,6 +1,6 @@
+/* Utils */ /* --- Colors */
 /* Variables */
 /* --- Sizes */
-/* --- Colors */
 .brief {
   display: flex;
   background-color: rgb(0, 0, 33);
@@ -97,16 +97,15 @@
   transform: translateY(100vh);
 }
 .brief__animation--stars {
-  width: 100vw;
-  height: 100vh;
+  width: 100vmax;
+  height: 100vmax;
   position: absolute;
   top: 0;
   left: 0;
   animation: circle infinite 60s linear;
 }
 .brief__animation--star {
-  background-color: #000;
-  position: fixed;
+  position: absolute;
   border-radius: 50%;
   background-color: rgba(69, 94, 115, 0.9);
   transition: opacity 1s ease;
