--- a/htdocs/components/projects/projects.css
+++ b/htdocs/components/projects/projects.css
@@ -165,7 +165,14 @@
 @media (min-width: 768px) {
   .projects__item--title {
     max-width: 80%;
+    margin-bottom: 0.5em;
   }
+}
+.projects__item--tagline {
+  font-size: 0.9em;
+  opacity: 0.6;
+  text-transform: capitalize;
+  margin-bottom: var(--col-gap);
 }
 .projects__item--tags {
   font-size: 13px;
